Lecture-2: rating fix; (+3 squashed commit)
Squashed commit:

[77a5502] Lecture-2: rating;

[919e2ad] Lecture-2: replaced angular style binding with css;

[15e9a3b] Lecture-2: hw task 3 stopPropagation;

--- a/src/app/pages/products-list/card/card.component.css
+++ b/src/app/pages/products-list/card/card.component.css
@@ -21,3 +21,8 @@
     z-index: 1;
     top: -140px;
 }
+
+.card-image {
+    max-height: 300px;
+    max-width: 400px;
+}
